[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
build = "build.rs"
name = "android-binder"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1"
cargo-make = "0.30.7"
hexdump = "0.1.0"
log = "0.4.8"
nix = "0.17.0"

[dependencies.error-chain]
default-features = false
version = "0.12.2"

[dev-dependencies]
android_logger = "0.8.6"

[features]
binder_version_7 = []
binder_version_8 = []
default = ["binder_version_7"]
